--- a/digikala.ui
+++ b/digikala.ui
@@ -220,6 +220,9 @@
                   <pointsize>14</pointsize>
                  </font>
                 </property>
+                <property name="readOnly">
+                 <bool>true</bool>
+                </property>
                </widget>
               </item>
              </layout>
